--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-plotly
-gdown
-openpyxl
+streamlit>=1.38.0
+pandas>=2.2.2
+plotly>=5.24.1
+requests>=2.32.3
+gdown>=5.2.0
+openpyxl>=3.1.5
